style(work-detail): adjust for mobile

--- a/scss/_t.scss
+++ b/scss/_t.scss
@@ -68,7 +68,11 @@
   &--24sb {
     @extend .t-body;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 20px;
+
+    @include tablet {
+      font-size: 24px;
+    }
   }
 }
 
