--- a/scss/_t.scss
+++ b/scss/_t.scss
@@ -3,6 +3,12 @@
   letter-spacing: 0.03em;
   line-height: 1.3;
 
+  &--16b {
+    @extend .t-title;
+    font-weight: 700;
+    font-size: 16px;
+  }
+
   &--20b {
     @extend .t-title;
     font-weight: 700;
@@ -53,6 +59,16 @@
     @extend .t-body;
     font-weight: 300;
     font-size: 14px;
+  }
+
+  &--18sb {
+    @extend .t-body;
+    font-weight: 600;
+    font-size: 16px;
+
+    @include tablet {
+      font-size: 18px;
+    }
   }
 
   &--18l {
