--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -51,10 +51,10 @@
       @include justify-content(space-between);
       position: relative;
       background: white;
-      padding: 30px;
+      padding: 30px 0px 30px 30px;
 
       @include tablet {
-        padding: 40px;
+        padding: 40px 0px 40px 40px;
       }
 
       &:before {
@@ -81,6 +81,13 @@
       }
     }
 
+      .work_projectThumbImg {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+        object-position: center center;
+      }
+
       .work_projectTitle {
         margin: 0;
 
@@ -91,6 +98,11 @@
         color: $gray;
       }
 
+      .work_projectBtn {
+        @include align-self(flex-start);
+      }
+
+      .work_projectThumbImg + .work_projectTextWrapper,
       .work_projectTextWrapper + .work_projectBtn {
         margin-top: 20px;
       }
